--- a/app/views/partials/account.html
+++ b/app/views/partials/account.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="account__data">
-        
+
         {% if path == 'account' %}
             <section class="section-edit">
                 <div class="section-edit__title">
@@ -124,10 +124,10 @@
                             <div class="shipping">
                                 <div class="shipping-inner">
                                     <p class="shipping-title">Hans Evangelista</p>
-                                    <p class="shipping-subtitle">Av, Holi boli crayoli #666</p>
+                                    <p class="shipping-subtitle">Av. Ricardo Palma 613</p>
                                     <span class="shipping-subtitle">Lima</span>
-                                    <span class="shipping-subtitle">Lima</span>
-                                    <span class="shipping-subtitle">Lima 01</span>
+                                    <!-- <span class="shipping-subtitle">Lima</span> -->
+                                    <span class="shipping-subtitle"> - Lima 01</span>
                                     <p class="shipping-subtitle">908552187</p>
                                     <div class="shipping-buttons">
                                         <button class="button-solid" data-size='small' data-color='gray' data-expand=''>Delete</button>
@@ -199,6 +199,6 @@
                 </div>
             </section>
         {% endif %}
-        
+
     </div>
 </section>
