--- a/app/views/user/account/addresses.html
+++ b/app/views/user/account/addresses.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block modal %}
-	
+
 	<div class="modal">
 		<div class="modal-box">
 
@@ -27,9 +27,9 @@
 				<div class="input-container">
 				    <label>Ciudad</label>
 				    <select class="input" name="gender">
-				        <option disabled selected>Holi</option>
-				        <option value="Male">Boli</option>
-				        <option value="Female">Crayoli</option>
+				        <option disabled selected>Lima</option>
+				        <option value="Male">Trujillo</option>
+				        <option value="Female">Arequipa</option>
 				    </select>
 				</div>
 				<div class="input-container">
@@ -107,7 +107,7 @@
 
 	    // var errorMessage = {{ errorMessage|json|safe }}
 	    // console.log('errorMessage: ', errorMessage)
-	    
+
 	    var user = {{ user|json|safe }}
 	    console.log('user: ', user)
 	</script>
