--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -37,7 +37,7 @@
 				<div class="Profile-section-input">
 					<span>artemanifiesto.com/</span>&nbsp;
 					<div>
-						<input class="input" type="text" value="{{user.username}}" name="username" placeholder="username">
+						<input class="input" type="text" name="username" placeholder="username">
 					</div>
 				</div>
 				<div class="Profile-section-input column2">
@@ -222,9 +222,13 @@
 
 
 {% block scripts %}
-<script>
-	var user = {{user|json|safe}};
-	console.log(user);
-</script>
+
+	<script>
+		var user = {{user|json|safe}};
+		console.log(user);
+	</script>
+
+	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/complite-profile.js"></script>
+
 {% endblock %}
