--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,7 +1,7 @@
 {% extends '../partials/base.html' %}
 
-{% set path = 'interests' %}
-{% set title = 'Arte Manifiesto | Completar Perfil' %}
+{% set path = 'cart' %}
+{% set title = 'Arte Manifiesto | Cart' %}
 
 {% block stylesheets %}
 	<link rel="stylesheet" type="text/css" href="/css/cart.css">
