--- a/app/views/user/cart/index.html
+++ b/app/views/user/cart/index.html
@@ -1,15 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cart</title>
-</head>
-<body>
+{% extends '../../partials/base.html' %}
 
-<script>
-    var products = {{products|json|safe}};
-    console.log(products);
-</script>
+{% set path = 'cart' %}
+{% set title = 'Arte Manifiesto | Cart' %}
 
-</body>
-</html>
+{% block stylesheets %}
+	<link rel="stylesheet" type="text/css" href="/css/cart.css">
+{% endblock %}
+
+{% block elements %}
+
+	<div class="cart">
+		<div class="cart-item">
+			<div class="cart-item-product">
+				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
+				<div class="cart-item-name">
+					<p>Samsung Galaxy Case/Skin</p>
+					<p class="skinny-text" data-color="light">product model</p>
+				</div>
+			</div>
+			<div class="cart-item-setings">
+				<div class="cart-item-price">S/. 20.00</div>
+				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
+				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
+			</div>
+		</div>
+		<div class="cart-item">
+			<div class="cart-item-product">
+				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
+				<div class="cart-item-name">
+					<p>Samsung Galaxy Case/Skin</p>
+					<p class="skinny-text" data-color="light">product model</p>
+				</div>
+			</div>
+			<div class="cart-item-setings">
+				<div class="cart-item-price">S/. 20.00</div>
+				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
+				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
+			</div>
+		</div>
+		<div class="cart-item">
+			<div class="cart-item-product">
+				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
+				<div class="cart-item-name">
+					<p>Samsung Galaxy Case/Skin</p>
+					<p class="skinny-text" data-color="light">product model</p>
+				</div>
+			</div>
+			<div class="cart-item-setings">
+				<div class="cart-item-price">S/. 20.00</div>
+				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
+				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
+			</div>
+		</div>
+		<div class="cart-item">
+			<div class="cart-item-product">
+				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
+				<div class="cart-item-name">
+					<p>Samsung Galaxy Case/Skin</p>
+					<p class="skinny-text" data-color="light">product model</p>
+				</div>
+			</div>
+			<div class="cart-item-setings">
+				<div class="cart-item-price">S/. 20.00</div>
+				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
+				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
+			</div>
+		</div>
+		<div class="cart-item">
+			<div>
+				<div class="subtotal">S/. 120.00</div>
+				<div class="shipping">S/. 7.00</div>
+				<div class="total">S/. 127.00</div>
+			</div>
+		</div>
+	</div>
+
+
+{% endblock %}
+
+
+{% block scripts %}
+
+	<script>
+		var products = {{products|json|safe}};
+		console.log('products: ', products);
+	</script>
+
+{% endblock %}
