--- a/app/views/user/cart/index.html
+++ b/app/views/user/cart/index.html
@@ -66,12 +66,29 @@
 				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
 			</div>
 		</div>
-		<div class="cart-item">
-			<div>
-				<div class="subtotal">S/. 120.00</div>
-				<div class="shipping">S/. 7.00</div>
-				<div class="total">S/. 127.00</div>
-			</div>
+		<div class="cart-totals">
+
+			<table class="prices">
+			  <tr>
+			    <td>Subtotal</td>
+			    <td>S/. 120.00</td>
+			  </tr>
+			  <tr>
+			    <td>Envio</td>
+			    <td>S/. 7.00</td>
+			  </tr>
+			  <tr class="total">
+			    <td>Total</td>
+			    <td>S/. 127.00</td>
+			  </tr>
+			</table>
+
+			<!-- <div class="prices">
+				<div class="subtotal">subtotal S/. 120.00</div>
+				<div class="shipping">impuestos S/. 7.00</div>
+				<div class="total">TOTAL S/. 127.00</div>
+			</div> -->
+
 		</div>
 	</div>
 
