--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,84 +1,112 @@
 {% extends '../partials/base.html' %}
 
-{% set path = 'cart' %}
-{% set title = 'Arte Manifiesto | Cart' %}
-
-{% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="/css/cart.css">
-{% endblock %}
+{% set path = 'profile' %}
+{% set title = 'Arte Manifiesto' %}
+{% set css = 'profile' %}
 
 {% block elements %}
 
-	<div class="cart">
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div>
-				<div class="subtotal">S/. 120.00</div>
-				<div class="shipping">S/. 7.00</div>
-				<div class="total">S/. 127.00</div>
-			</div>
-		</div>
-	</div>
+<!-- <section class="works" data-columns>
+</section> -->
 
+<!--
+<section class="products">
+</section>
+-->
 
+<!--
+<section class="users">
+</section>
+-->
+
+<!-- <section class="collections">
+</section>
+ -->
 {% endblock %}
-
-
 {% block scripts %}
+<!--
+<script>
+    var user = {{user | json | safe}};
+</script>
+ -->
+<!-- <script src="/js/vendor/jquery.min.js"></script>
+<script src="/js/vendor/hammer.min.js"></script>
+<script src="/js/vendor/underscore-min.js"></script>
+<script src="/js/vendor/salvattore.js"></script>
+<script src="/js/vendor/masonry.pkgd.min.js"></script>
+<script src="/js/app.min.js"></script>
+ -->
+
+<script>
+    // $(function () {
+    // });
+
+        // new APP.RestClientManager();
+        // new APP.TemplateManager();
+
+        // var templates = ['work', 'product', 'user', 'collection'];
+        // APP.TemplateManager.instance.loadTemplates(templates).done(function () {
+        //     console.log('templates loaded');
+        // });
+
+            /*APP.RestClientManager.instance.execute({
+             url: DataApp.searchCollections,
+             method: 'post'
+             }).done(function (data) {
+             var i, collection;
+             var container = $('.collections');
+             for (i = 0; i < data.collections.length; i++) {
+             collection = new APP.Collection(data.collections[i]);
+             container.append(collection.view);
+             }
+             });*/
+
+        /*
+         APP.TemplateManager.instance.loadTemplateById('work', function () {
+         APP.RestClientManager.instance.execute({
+         url: DataApp.searchWorks,
+         method: 'post'
+         }).done(function (data) {
+         var i, work;
+         var container = $('.works')[0];
+         for (i = 0; i < data.works.length; i++) {
+         data.works[i].index = i + 1;
+         work = new APP.Work(data.works[i]);
+         salvattore.appendElements(container, [work.rawView]);
+         }
+         });
+         });
+         */
+
+        /*
+         APP.TemplateManager.instance.loadTemplateById('product', function () {
+         APP.RestClientManager.instance.execute({
+         url: DataApp.searchProducts,
+         method: 'post'
+         }).done(function (data) {
+         var i, product;
+         var container = $('.products');
+         for (i = 0; i < data.products.length; i++) {
+         product = new APP.Product(data.products[i]);
+         container.append(product.view);
+         }
+         });
+         });
+         */
+
+        /*APP.TemplateManager.instance.loadTemplateById('user', function () {
+         APP.RestClientManager.instance.execute({
+         url: DataApp.searchUsers,
+         method: 'post'
+         }).done(function (data) {
+         var i, user;
+         var container = $('.users');
+         for (i = 0; i < data.users.length; i++) {
+         user = new APP.User(data.users[i]);
+         container.append(user.view);
+         }
+         });
+         });*/
+</script>
 
 {% endblock %}
