--- a/public/src/stylus/cart.styl
+++ b/public/src/stylus/cart.styl
@@ -1,5 +1,5 @@
 /*------------------------------------*
-	$ PRODUCTS
+	$ CART
 *------------------------------------*/
 @import 'base.styl'
 
@@ -43,3 +43,29 @@
 			padding .5rem
 			font-size 1.25rem
 			cursor pointer
+			color: #aaa;
+	&-totals
+		display flex
+		justify-content flex-end
+		padding .5rem 1rem
+		.prices
+			font-family: 'Oswald';
+			color: #585858;
+			font-weight: 400;
+			letter-spacing: .75px;
+			font-size: .9rem;
+			td
+				text-align right
+				padding-left: 1rem;
+			.total
+				color #e41421
+				font-size: 1rem;
+				td:nth-child(2)
+					font-size 1.15rem
+					// background blue
+				// background blue
+	// 	// background red
+	// 		font-size: 0.85rem;
+	// 		letter-spacing: 1px;
+	// 		font-family: 'Raleway';
+	// 		font-weight: 600;
