render products cart

--- a/app/views/user/cart/index.html
+++ b/app/views/user/cart/index.html
@@ -9,7 +9,49 @@
 
 {% block elements %}
 
-	<div class="cart">
+
+	{% for a, b in products %}
+
+		<div class="cart">
+
+			{% for product in b %}
+				<div class="cart-item">
+					<div class="cart-item-product">
+						<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
+						<div class="cart-item-name">
+							<p>Samsung Galaxy Case/Skin</p>
+							<p class="skinny-text" data-color="light">product model</p>
+						</div>
+					</div>
+					<div class="cart-item-setings">
+						<div class="cart-item-price">S/. 20.00</div>
+						<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
+						<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
+					</div>
+				</div>
+			{% endfor %}
+
+			<div class="cart-totals">
+				<table class="prices">
+				  <tr>
+				    <td>Subtotal</td>
+				    <td>S/. 120.00</td>
+				  </tr>
+				  <tr>
+				    <td>Envio</td>
+				    <td>S/. 7.00</td>
+				  </tr>
+				  <tr class="total">
+				    <td>Total</td>
+				    <td>S/. 127.00</td>
+				  </tr>
+				</table>
+			</div>
+		</div>
+
+	{% endfor %}
+
+<!-- 	<div class="cart">
 		<div class="cart-item">
 			<div class="cart-item-product">
 				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
@@ -67,7 +109,6 @@
 			</div>
 		</div>
 		<div class="cart-totals">
-
 			<table class="prices">
 			  <tr>
 			    <td>Subtotal</td>
@@ -82,15 +123,8 @@
 			    <td>S/. 127.00</td>
 			  </tr>
 			</table>
-
-			<!-- <div class="prices">
-				<div class="subtotal">subtotal S/. 120.00</div>
-				<div class="shipping">impuestos S/. 7.00</div>
-				<div class="total">TOTAL S/. 127.00</div>
-			</div> -->
-
 		</div>
-	</div>
+	</div> -->
 
 
 {% endblock %}
@@ -102,5 +136,8 @@
 		var products = {{products|json|safe}};
 		console.log('products: ', products);
 	</script>
+
+	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
+	<!-- // <script type="text/javascript" src="/js/cart.js"></script> -->
 
 {% endblock %}
