--- a/public/src/stylus/cart.styl
+++ b/public/src/stylus/cart.styl
@@ -14,6 +14,8 @@
 	&-item
 		&:not(:last-child)
 			border-bottom 1px solid #ddd
+		&:hover
+			background #eee
 		color: #585858;
 		padding .5rem
 		display flex
