--- a/public/src/stylus/cart.styl
+++ b/public/src/stylus/cart.styl
@@ -10,7 +10,8 @@
 .cart
 	max-width 800px
 	margin 2rem auto
-	border 1px solid #ddd
+	// border 1px solid #ddd
+	border 1px solid #bbb
 	&-item
 		&:not(:last-child)
 			border-bottom 1px solid #ddd
@@ -52,18 +53,21 @@
 		padding .5rem 1rem
 		.prices
 			font-family: 'Oswald';
-			color: #585858;
-			font-weight: 400;
+			// color: #585858;
+			color: #888;
+			font-weight: 300;
 			letter-spacing: .75px;
-			font-size: .9rem;
+			font-size: .85rem;
 			td
 				text-align right
 				padding-left: 1rem;
 			.total
-				color #e41421
-				font-size: 1rem;
-				td:nth-child(2)
-					font-size 1.15rem
+				font-weight: 400;
+				color: #333;
+				// color #e41421
+				// font-size: 1rem;
+				// td:nth-child(2)
+					// font-size 1.15rem
 					// background blue
 				// background blue
 	// 	// background red
