--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -927,7 +927,7 @@ body {
 .cart {
   max-width: 800px;
   margin: 2rem auto;
-  border: 1px solid #ddd;
+  border: 1px solid #bbb;
 }
 .cart-item {
   color: #585858;
@@ -1016,19 +1016,16 @@ body {
 }
 .cart-totals .prices {
   font-family: 'Oswald';
-  color: #585858;
-  font-weight: 400;
+  color: #888;
+  font-weight: 300;
   letter-spacing: 0.75px;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
 }
 .cart-totals .prices td {
   text-align: right;
   padding-left: 1rem;
 }
 .cart-totals .prices .total {
-  color: #e41421;
-  font-size: 1rem;
-}
-.cart-totals .prices .total td:nth-child(2) {
-  font-size: 1.15rem;
+  font-weight: 400;
+  color: #333;
 }
