--- a/app/views/user/cart/index.html
+++ b/app/views/user/cart/index.html
@@ -29,7 +29,8 @@
 																								data-id="{{ product.Product.id }}"
 																								data-cart="js-{{a}}"
 																								value="{{ product.items }}" type="number" min="1" max="9"> </div>
-						<div class="cart-item-closed"><i class="js-closed fa fa-times-circle"></i></div>
+						<div 	class="js-closed cart-item-closed"
+									data-id="{{ product.Product.id }}"><i class="fa fa-times-circle"></i></div>
 					</div>
 				</div>
 			{% endfor %}
@@ -72,79 +73,3 @@
 	<script type="text/javascript" src="/js/cart.js"></script>
 
 {% endblock %}
-
-
-<!-- 	<div class="cart">
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-item">
-			<div class="cart-item-product">
-				<figure class="cart-item-image"> <img src="/img/products/product15.jpg"> </figure>
-				<div class="cart-item-name">
-					<p>Samsung Galaxy Case/Skin</p>
-					<p class="skinny-text" data-color="light">product model</p>
-				</div>
-			</div>
-			<div class="cart-item-setings">
-				<div class="cart-item-price">S/. 20.00</div>
-				<div class="cart-item-quantity"> <input value="1" type="number" min="1" max="9"> </div>
-				<div class="cart-item-closed"><i class="fa fa-times-circle"></i></div>
-			</div>
-		</div>
-		<div class="cart-totals">
-			<table class="prices">
-			  <tr>
-			    <td>Subtotal</td>
-			    <td>S/. 120.00</td>
-			  </tr>
-			  <tr>
-			    <td>Envio</td>
-			    <td>S/. 7.00</td>
-			  </tr>
-			  <tr class="total">
-			    <td>Total</td>
-			    <td>S/. 127.00</td>
-			  </tr>
-			</table>
-		</div>
-	</div> -->
