--- a/public/src/stylus/cart.styl
+++ b/public/src/stylus/cart.styl
@@ -8,10 +8,17 @@
 
 
 .cart
-	max-width 800px
-	margin 2rem auto
-	// border 1px solid #ddd
-	border 1px solid #bbb
+	padding 1rem .5rem
+	>p
+		color #59c097
+		max-width 800px
+		margin .5rem auto
+		font-family: 'Roboto Condensed';
+		letter-spacing: .5px;
+	&-inner
+		max-width 800px
+		margin 0 auto
+		border 1px solid #bbb
 	&-item
 		&:not(:last-child)
 			border-bottom 1px solid #ddd
