prealoder in add cart

--- a/app/views/partials/single-product.html
+++ b/app/views/partials/single-product.html
@@ -34,7 +34,10 @@
 				</div>
 
 				<div class="actions__buy">
-					<a class="button-solid js-addCart" data-size='large' data-color='red' data-expand='true'>Comprar</a>
+					<a class="button-solid js-addCart" data-size='large' data-color='red' data-expand='true'>
+						<p>Comprar</p>
+						<i class="fa fa-spinner"></i>
+					</a>
 				</div>
 			</div>
 		</div>
