--- a/public/src/stylus/single-product.styl
+++ b/public/src/stylus/single-product.styl
@@ -195,3 +195,17 @@
 		display flex
 		.my-column
 			flex 1
+
+
+.button-solid
+	i
+		display none
+		animation 1.5s load infinite
+
+@keyframes load
+	0%
+		transform rotate(0)
+	50%
+		transform rotate(180deg)
+	100%
+		transform rotate(360deg)
