--- a/app/views/user/checkout/shipping.html
+++ b/app/views/user/checkout/shipping.html
@@ -1,13 +1,97 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Shipping</title>
-</head>
-<body>
-<script>
-    var addresses = {{addresses|json|safe}};
-    console.log(addresses);
-</script>
-</body>
-</html>
+{% extends '../../partials/base.html' %}
+
+{% set path = 'cart' %}
+{% set title = 'Arte Manifiesto | Cart' %}
+
+{% block stylesheets %}
+	<link rel="stylesheet" type="text/css" href="/css/shipping.css">
+{% endblock %}
+
+{% block elements %}
+	<section class="addresses">
+		<article class="address selected">
+			<div class="address-check">
+				<input type="radio" name="address" value="1" selected>
+			</div>
+			<div class="address-info">
+				<p class="address-info-title">Hans holi</p>
+				<p class="address-info-text">Av, HOli boli crayoli #666</p>
+				<p class="address-info-text">Lima, Lima, lima01</p>
+				<p class="address-info-text">Peru</p>
+				<p class="address-info-text">Ph: 51 908552187</p>
+			</div>
+		</article>
+		<article class="address">
+			<div class="address-check">
+				<input type="radio" name="address" value="2">
+			</div>
+			<div class="address-info">
+				<p class="address-info-title">Hans holi</p>
+				<p class="address-info-text">Av, HOli boli crayoli #666</p>
+				<p class="address-info-text">Lima, Lima, lima01</p>
+				<p class="address-info-text">Peru</p>
+				<p class="address-info-text">Ph: 51 908552187</p>
+			</div>
+		</article>
+		<article class="address">
+			<div class="address-check">
+				<input type="radio" name="address" value="0">
+			</div>
+			<div class="address-info">
+				<p class="address-info-title">Nueva direccion</p>
+			</div>
+		</article>
+
+		<form class="shipping-form" action="">
+			<div class="input-container">
+			    <label>Ciudad</label>
+			    <select class="input" name="gender">
+			        <option disabled selected>Lima</option>
+			        <option value="Male">Trujillo</option>
+			        <option value="Female">Arequipa</option>
+			    </select>
+			</div>
+			<div class="input-container">
+			    <label>Nombre</label>
+			    <input class="input" type="text" placeholder=""/>
+			</div>
+			<div class="input-container">
+			    <label>Direccion</label>
+			    <input class="input" type="text" placeholder=""/>
+			</div>
+			<div class="input-container">
+			    <label>Ciudad</label>
+			    <input class="input" type="text" placeholder=""/>
+			</div>
+			<div class="input-container">
+			    <label>Estado</label>
+			    <input class="input" type="text" placeholder=""/>
+			</div>
+			<div class="input-container">
+			    <label>Codigo Postal</label>
+			    <input class="input" type="text" placeholder=""/>
+			</div>
+			<div class="input-container">
+			    <label>Telefono</label>
+			    <input class="input" type="text" placeholder=""/>
+			</div>
+		</form>
+
+	</section>
+
+	<input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar y continuar" type="submit">
+
+{% endblock %}
+
+
+{% block scripts %}
+
+	<script>
+		var addresses = {{addresses|json|safe}};
+		console.log('addresses: ', addresses);
+	</script>
+
+<!-- 	// <script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
+	// <script type="text/javascript" src="/js/cart.js"></script>
+ -->
+{% endblock %}
